Fix spacing of description

--- a/frontend/src/components/OrgEvents/OrgEvents.css
+++ b/frontend/src/components/OrgEvents/OrgEvents.css
@@ -255,6 +255,7 @@
     white-space: pre-wrap;
 	text-align: left;
 	margin-bottom: 30px;
+	margin-left: 20px;
 }
 
 .volunteerSpaceStudent{
